# dsss_homework_2

./: README.md  pyproject.toml  requirements.txt  setup.py
math_quiz/: math_quiz.py  tests_math_quiz.py
